<resources>
    <string name="app_name">TestProject Demo</string>
    <string name="main_activity_title">Demo</string>
    <string-array name="titles_array">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Miss</item>
    </string-array>
    <string name="title_activity_profile">Profile</string>
    <string name="password">Password</string>
    <string name="password_description">Enter your password</string>
    <string name="name_description">Enter Your Name</string>
    <string name="full_name">Full Name</string>
    <string name="login_button">Login Button</string>
    <string name="hint_password">Hint: password is 12345</string>
    <string name="login">Login</string>
</resources>
