<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.testproject.demo.MainActivity">

    <ScrollView
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/name_components"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/name"
                android:contentDescription="@string/name_description"
                android:hint="@string/name_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|textNoSuggestions"
                android:imeOptions="flagNoExtractUi"
                tools:layout_conversion_absoluteHeight="42dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="8dp"
                tools:layout_conversion_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/labelPassword"
                android:contentDescription="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:contentDescription="@string/password_description"
                android:hint="@string/password_description"
                android:inputType="textPassword"
                android:imeOptions="flagNoExtractUi"
                tools:layout_conversion_absoluteHeight="42dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="8dp"
                tools:layout_conversion_absoluteY="50dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="50dp" />


            <TextView
                android:id="@+id/labelPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/hint_password" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/login"
                android:contentDescription="@string/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:onClick="performLogin"
                android:text="Login"
                tools:layout_conversion_absoluteHeight="86dp"
                tools:layout_conversion_absoluteWidth="0dp"
                tools:layout_conversion_absoluteX="8dp"
                tools:layout_conversion_absoluteY="872dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="872dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
